# dex

./: .gitignore  ACHIEVEMENT.md  ACTUAL_ACHIEVEMENT.md  API_DOCUMENTATION.md  BENCHMARK_RESULTS.md  BILLION_ACHIEVED.md  CHANGELOG.md  CI_DOCUMENTATION.md  CI_FINAL_STATUS.md  CI_FIXED.md  CI_STATUS.md  CI_SUCCESS.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLUSTER_RUNNING.md  CLUSTER_STATUS.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_MEMORY_ANALYSIS.md  DEPLOYMENT_CONFIRMATION.md  Dockerfile  Dockerfile.cuda  Dockerfile.multi-node  FINAL_ANALYSIS.md  FINAL_REPORT.md  FINAL_STATUS.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  FPGA_ACCELERATION.md  FPGA_SUPPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  LATENCY_ANALYSIS.md  LICENSE  LLM.md  MAKE_TARGETS_STATUS.md  MEMORY_REPORT.md  MLX_BILLIONS_PROOF.md  MLX_INTEGRATION.md  Makefile  (+40 more)
.claude/: settings.local.json
api/: openapi.yaml
backend/: Dockerfile  Dockerfile.cpp  Dockerfile.go  Dockerfile.hybrid  FINAL_REPORT.md  MAC_STUDIO_DEPLOYMENT.md  MULTI_NODE_QUICK_START.md  Makefile  PERFORMANCE.md  PERFORMANCE_REPORT.md  README.md  bench_results.txt  coverage.out  dex-snapshot.json  docker-compose.dev.yml  docker-compose.yml  go.mod  package.json  performance_report.md  run-multi-node-test.sh  zmq-benchmark
backend/rust-engine/: Cargo.toml  Dockerfile  build.rs
backend/rust-engine/benches/: orderbook.rs
backend/rust-engine/src/: engine.rs  grpc_server.rs  lib.rs  main.rs  orderbook.rs  types.rs
bridge/: mlx_engine.cpp  mlx_engine.h
client/: package.json  tsconfig.json
(+476 files in other folders)
