[package]
name = "lx-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Data structures
indexmap = "2.1"
priority-queue = "1.3"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Performance
ahash = "0.8"
crossbeam = "0.8"
rayon = "1.8"

# Fixed-point math
rust_decimal = "1.33"
fixed = "1.24"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[[bench]]
name = "orderbook"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false